[package]
name = "polylog"
version = "1.2.1"
authors = ["Alexander Voigt <Alexander.Voigt@physik.rwth-aachen.de>"]
license = "LGPL-3.0-only"
readme = "README.md"
description = "Rust implementation of polylogarithms."
homepage = "https://github.com/Expander/polylog"
repository = "https://github.com/Expander/polylog"

[dependencies]
num = "0.2"

[dev-dependencies]
rand = "0.7"
