[package]
name = "polylog"
version = "2.2.0"
authors = ["Alexander Voigt <alexander.voigt@hs-flensburg.de>"]
license = "LGPL-3.0-only"
readme = "README.md"
description = "Rust implementation of polylogarithms."
homepage = "https://github.com/Expander/polylog"
repository = "https://github.com/Expander/polylog"
edition = '2018'

[dependencies]
num = "0.4"

[dev-dependencies]
rand = "0.8"
