[package]
name = "polylog"
version = "2.5.2"
authors = ["Alexander Voigt <alexander.voigt@hs-flensburg.de>"]
license = "LGPL-3.0-only"
readme = "README.md"
description = "Rust implementation of polylogarithms."
homepage = "https://github.com/Expander/polylog"
repository = "https://github.com/Expander/polylog"
edition = '2018'

[dependencies]
num = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "li"
harness = false
